Fix header alignment and order

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,7 +19,6 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    padding: 10px;
     min-height: 100px;
     border-bottom: 1px black;
 }
@@ -38,6 +37,10 @@ body {
     flex-direction: row;
     justify-content: center;
     max-height: 150px;
+}
+
+.up div {
+    cursor: pointer;
 }
 
 .pointer {
@@ -73,16 +76,6 @@ body {
     margin: 0px 5px;
     border-radius: 50%;
     background-color: white;
-    width: 50px;
-    height: 50px;
-}
-
-#moving {
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 50%;
-    background: #E24E42;
     width: 50px;
     height: 50px;
 }
@@ -204,13 +197,17 @@ body {
     border-radius: 50%;
     background-color: #1b286a;
     padding: 10px;
-    margin: 10px;
     width: 70px;
     height: 70px;
     color: white;
     font-size: 3em;
     text-align: center;
-    align-self: flex-start;
+    float: right;
+}
+
+.name {
+    float: left;
+    padding-top: 5px;
 }
 
 .logo:hover {
@@ -218,6 +215,11 @@ body {
     transform: rotate(360deg);
     transition: all 1s ease-in-out;
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, .2);
+}
+
+.title {
+    overflow: hidden;
+    vertical-align: middle;
 }
 
 .title h1 {
@@ -228,23 +230,27 @@ body {
 .player {
     display: inline-block;
     padding: 5px;
-    border-radius: 68px;
     align-self: flex-end;
     font-size: 1em;
-    margin-top: 30px;
+    bottom: 0;
+    border-radius: 8px;
+    box-shadow: 4px 4px 2px 0 #455A64;
+    border-top: 2px solid #ECEFF1;
+    border-left: 2px solid #ECEFF1;
+    font-size: 1em;
 }
 
 .player p {
     text-align: center;
 }
-
+/*
 #player1 {
-    margin: 30px 50px 10px 20px;
+    margin: 40px 50px 0px 20px;
 }
 
 #player2 {
-    margin: 30px 20px 10px 50px;
-}
+    margin: 40px 20px 0px 50px;
+} */
 
 .score {
     margin: 5px;
